--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev:tsc": "tsc --watch --preserveWatchOutput",
-    "dev:node": "node --enable-source-maps --watch dist/index.js",
-    "dev": ""
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "concurrently": "^8.2.2",
+    "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
