--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "packageManager": "yarn@4.4.0",
-  
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
+    "generate": "prisma generate",
+    "migrate:dev": "prisma migrate dev"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
+    "prisma": "5.18.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "5.18.0",
     "express": "^4.19.2"
   }
+  
 }
