--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
+    "dev": "ts-node-dev --respawn src/server.ts",
     "generate": "prisma generate",
     "migrate:dev": "prisma migrate dev"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
-    "prisma": "5.18.0",
+    "prisma": "5.19.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@prisma/client": "5.18.0",
     "express": "^4.19.2"
   }
-  
 }
