--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/server.ts",
     "generate": "prisma generate",
-    "migrate:dev": "prisma migrate dev"
+    "migrate": "prisma migrate dev"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
