--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^22.5.1",
+    "@types/node": "^22.5.3",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.19.0",
-    "express": "^4.19.2"
+    "@types/multer": "^1.4.12",
+    "express": "^4.19.2",
+    "multer": "1.4.5-lts.1"
   }
 }
